Done the wrap table but still have bug with filter

--- a/testing-web/src/Theme/Theme.scss
+++ b/testing-web/src/Theme/Theme.scss
@@ -223,10 +223,12 @@
 .btn-style{
   background: transparent;
   border: 2px;
-  border-color: #292929;
-  border-radius: 20px;
+  border-style: solid;
+  border-color: #d1d1d1;
+  border-radius: 10px;
   margin-left: 10px;
   margin-right: 10px;
+  
   span{
     background: transparent;
     border: none;
@@ -262,6 +264,40 @@
     align-items: center;
   }
 
+}
+
+.contact-table{
+  margin-left: 50px;
+  margin-right: 50px;
+  .page-group{
+    display: flex;
+    flex-direction: row;  
+    justify-content: flex-end ;  
+  }
+  
+}
+.button-group{
+  padding-left: 5px;
+  padding-right: 5px;
+  background-color: transparent;
+ 
+  display: flex;
+  flex-direction: row;
+  
+  // width: 60px;
+}
+.btn-page-style{
+  background-color: transparent;
+  border-color: transparent;
+  width: 50px;
+  &:hover{
+    border-radius: 10px;
+    background-color: #e0e0e0;
+  }
+}
+.dropdown-btn{
+  margin-right: 70px;
+  
 }
 
 
